# witness

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  CPPLINT.cfg  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  docker-compose.yml  pycodestyle.cfg  requirements.in  requirements.txt
.github/actions/dev_environment/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: ci.yml  main.yml  pr.yml  publish.yml
ci/: deploy.sh  test_all.sh  test_changed.sh  travis_container_runner.sh
deploy/: BUILD.bazel  launcher.sh
docker/base_images/: Dockerfile.aarch64  Dockerfile.amd64  Dockerfile.armv7hf  build.sh  generate_dockerfiles.sh
docker/dev_environment/: Dockerfile  bashrc  build.sh  entrypoint.sh  shell.sh
docker/haproxy/: Dockerfile.armv7hf  haproxy.cfg
docker/wifi-connect/: Dockerfile.template  start.sh
tools/: github_repo.bzl  resin_deploy
tools/ci/: build_all_targets.sh  deploy.sh  run_all_tests.sh  test_all.sh  test_changed.sh
tools/workspace/: default.bzl
tools/workspace/bazel_deps/: repository.bzl
witness/: BUILD.bazel
witness/api/: BUILD.bazel  calibration.proto  error.proto  tracking.proto  witness.proto
witness/client/: BUILD  BUILD.bazel  client.rs  main.cpp  shell.py  simple_gui.py
witness/client/endpoint_scripts/: BUILD.bazel  automated_timelapse.py  clear_data.py  common.py  download_all.py  get_server_state.py  get_version.py  list_files.py  open_webcam.py  set_rotation.py  shell.py  start_calibration.py  start_monitor.py  start_recording.py  start_timelapse.py  stop_recording.py  take_3.py  take_photo.py  track.py
witness/deploy/: BUILD.bazel  launcher.sh
witness/drivers/: BUILD.bazel  amcrest.cpp  amcrest.h  amcrest.proto  amcrest_capture.cpp
witness/drivers/test/: example_camera_connections.textproto
witness/server/: BUILD.bazel  file_operations.cpp  file_operations.h  file_operations_test.cpp  main.cpp  server.cpp  server.h  webcam_manager.cpp  webcam_manager.h
witness/server/common/: BUILD.bazel  file_operations.cpp  file_operations.h  file_operations_test.cpp
witness/server/converters/: BUILD.bazel  converters.cpp  converters.h  converters_test.cpp
witness/server/file_operations/: BUILD.bazel  file_operations.cpp  file_operations.h  file_operations_test.cpp
witness/server/time/: BUILD.bazel  time.cpp  time.h  time_test.cpp
witness/server/vision/: BUILD.bazel  apriltag.cpp  apriltag.h  apriltag_test.cpp  calibration.cpp  calibration.h  calibration_test.cpp  create_timelapse.cpp  create_timelapse.h  imshow_wrapper.cpp  imshow_wrapper.h  imshow_wrapper_test.cpp
witness/server/vision/test_data/: .gitignore
witness/server/webcam/: BUILD.bazel  monitor.cpp  webcam.cpp  webcam.h
witness/server/webcam/actions/: BUILD.bazel  calibrate.cpp  calibrate.h  monitor.cpp  monitor.h  timelapse.cpp  timelapse.h  tracking.cpp  tracking.h  video_recorder.cpp  video_recorder.h  webcam_action.cpp  webcam_action.h
