exports_files([
    "requirements.txt",
    ".bazelversion",
    "pycodestyle.cfg",
    "CPPLINT.cfg",
])

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
)

# Python2 is a dependency of rules_docker due to its dependency on
# containerregistry. To run builds on environments in which 'which python'
# points to python3, you can use the py_runtime target below.
# To use this target, simply add the following flag to your build commands:
# --python_top=//python:py_runtime_2
# Note you need to have a symlink to a valid python2 version in
# '/usr/bin/python2' for this to work.
py_runtime(
    name = "py_runtime_2",
    files = [],
    interpreter_path = "/usr/bin/python2",
    visibility = ["//visibility:public"],
)
