#load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

package(default_visibility = ["//visibility:public"])

#exports_files([
#    "requirements.in",
#    ".bazelversion",
#    "pycodestyle.cfg",
#    "CPPLINT.cfg",
#])
#
#buildifier(
#    name = "buildifier.check",
#    exclude_patterns = [
#        "./.git/*",
#    ],
#    lint_mode = "warn",
#    mode = "diff",
#)

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
    requirements_windows = "requirements_windows.txt",
)
