bazel_dep(name = "aspect_bazel_lib", version = "2.5.0")
bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_proto", version = "6.0.0-rc2")
bazel_dep(name = "grpc", version = "1.56.3", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "protobuf", version = "23.1")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "googletest", version = "1.14.0")
#bazel_dep(name = "google_benchmark", version = "1.8.3")

#bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "gflags", version = "2.2.2", repo_name = "com_github_gflags_gflags")
bazel_dep(name = "glog", version = "0.7.0", repo_name = "com_github_google_glog")
bazel_dep(name = "eigen", version = "3.4.0")
bazel_dep(name = "libjpeg_turbo", version = "2.1.91")

# TODO(curtismuntz) Remove the repo_name as it causes 2 different versions of abseil (unconfirmed)
bazel_dep(name = "abseil-cpp", version = "20230802.0.bcr.1", repo_name = "com_google_absl")

#################################################################################
## python
#################################################################################
# We next initialize the python toolchain using the extension.
# You can set different Python versions in this block.
#python = use_extension("@rules_python//python/extensions:python.bzl", "python")
#python.toolchain(
#    configure_coverage_tool = True,
#    # Only set when you have mulitple toolchain versions.
#    is_default = True,
#    python_version = "3.10.2",
#)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.10.2",
    requirements_lock = "//:requirements_lock.txt",
    requirements_windows = "//:requirements_windows.txt",
)
use_repo(pip, "pip")

