load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library")

proto_library(
    name = "witness",
    srcs = [
        "calibration.proto",
        "error.proto",
        "tracking.proto",
        "witness.proto",
    ],
    visibility = ["//witness:__subpackages__"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

cc_proto_library(
    name = "cc_proto",
    visibility = ["//witness:__subpackages__"],
    deps = [":witness"],
)

cc_grpc_library(
    name = "cc_grpc",
    srcs = [":witness"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [
        ":cc_proto",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

#cpp_grpc_library(
#    name = "cc_grpc",
#    visibility = ["//visibility:public"],
#    protos = [":cc_proto"],
#)
#
#python_grpc_library(
#    name = "py_grpc",
#    transitive = True,
#    visibility = ["//visibility:public"],
#    protos = [":witness"],
#)

#rust_grpc_library(
#    name = "rust_grpc",
#    visibility = ["//visibility:public"],
#    deps = [":witness"],
#)
