load("@subpar//:subpar.bzl", "par_binary")
load("@murtis_bazel_tools//tools:linters.bzl", "pylint")

ENDPOINT_SCRIPTS=[
    "//witness/api:py_grpc",
    "//witness/client/endpoint_scripts:automated_timelapse",
    "//witness/client/endpoint_scripts:clear_data",
    "//witness/client/endpoint_scripts:common",
    "//witness/client/endpoint_scripts:download_all",
    "//witness/client/endpoint_scripts:get_server_state",
    "//witness/client/endpoint_scripts:get_version",
    "//witness/client/endpoint_scripts:list_files",
    "//witness/client/endpoint_scripts:open_webcam",
    "//witness/client/endpoint_scripts:set_rotation",
    "//witness/client/endpoint_scripts:start_monitor",
    "//witness/client/endpoint_scripts:start_recording",
    "//witness/client/endpoint_scripts:start_timelapse",
    "//witness/client/endpoint_scripts:stop_recording",
    "//witness/client/endpoint_scripts:take_3",
    "//witness/client/endpoint_scripts:take_photo",
]

par_binary(
    name = "simple_gui",
    srcs = ["simple_gui.py"],
    imports = ["endpoint_scripts"],
    visibility = ["//visibility:public"],
    deps = ENDPOINT_SCRIPTS,
)

par_binary(
    name = "shell",
    srcs = ["shell.py"],
    imports = ["endpoint_scripts"],
    visibility = ["//visibility:public"],
    deps = ENDPOINT_SCRIPTS,
)

pylint()
