# REQUIRES OPENCV BUILT WITH FFMPEG SUPPORT. I PROVED THIS WORKS BUT NEED TO BAZELIFY FFMPEG =(
proto_library(
    name = "amcrest_proto",
    srcs = ["amcrest.proto"],
    deps = [],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "amcrest_cc_proto",
    deps = [":amcrest_proto"],
)

# REQUIRES OPENCV BUILT WITH FFMPEG SUPPORT. I PROVED THIS WORKS BUT NEED TO BAZELIFY FFMPEG =(
cc_library(
    name = "amcrest",
    srcs = ["amcrest.cpp"],
    hdrs = ["amcrest.h"],
    linkopts = [
        "-lpthread",
        "-ldl",
    ],
    deps = [
        ":amcrest_cc_proto",
        "//third_party/alphanum",
        "//witness/server/file_operations",
        "@com_github_curl//:curl",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_google_protobuf//:protobuf",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "amcrest_capture",
    srcs = ["amcrest_capture.cpp"],
    linkopts = [
        "-lpthread",
        "-lstdc++fs",
    ],
    deps = [
        ":amcrest",
        "//witness/server/vision:create_timelapse",
        "@com_github_google_glog//:glog",
        "@com_github_p-ranav_indicators//:indicators",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)

#cc_test(
#    name = "test_amcrest",
#    srcs = ["test/test_amcrest.cpp"],
#    deps = [
#        ":amcrest",
#        "//external:gtest",
#    ],
#)
