load("@murtis_bazel_tools//tools:linters.bzl", "cpplint")

config_setting(
    name = "armeabi-v7a",
    values = {"cpu": "armeabi-v7a"},
)

genrule(
    name = "version_header",
    srcs = ["//witness:version.txt"],
    outs = ["version.h"],
    cmd =
        "sed -e \"s/\\(.*\\)/\\\"\\1\\\"/\" $(location //witness:version.txt) > tmpfile" +
        "&& echo -n \"#define WITNESS_VERSION \" > $@" +
        "&& echo `cat tmpfile` >> $@",
)

cc_binary(
    name = "server",
    srcs = [
        "main.cpp",
        "server.cpp",
        "server.h",
        ":version_header",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//witness/server/common:file_operations",
        "//witness/server/webcam:webcam",
        "//witness/server/webcam/actions:video_recorder",
        "//witness/server/webcam/actions:timelapse",
        "//witness/server/webcam/actions:monitor",
        "//witness/server/webcam/actions:tracking",
        "//witness/api:cc_grpc",
        "@com_github_glog_glog//:glog",
    ],
)

cpplint()
