load("@murtis_bazel_tools//tools:linters.bzl", "pylint")

ENDPOINT_SCRIPTS = [
    "//witness/api:py_grpc",
    "//witness/client/endpoint_scripts:automated_timelapse",
    "//witness/client/endpoint_scripts:clear_data",
    "//witness/client/endpoint_scripts:common",
    "//witness/client/endpoint_scripts:download_all",
    "//witness/client/endpoint_scripts:get_server_state",
    "//witness/client/endpoint_scripts:get_version",
    "//witness/client/endpoint_scripts:list_files",
    "//witness/client/endpoint_scripts:open_webcam",
    "//witness/client/endpoint_scripts:set_rotation",
    "//witness/client/endpoint_scripts:start_monitor",
    "//witness/client/endpoint_scripts:start_recording",
    "//witness/client/endpoint_scripts:start_timelapse",
    "//witness/client/endpoint_scripts:stop_recording",
    "//witness/client/endpoint_scripts:take_3",
    "//witness/client/endpoint_scripts:take_photo",
    "//witness/client/endpoint_scripts:track",
    "//witness/client/endpoint_scripts:start_calibration",
]

py_binary(
    name = "shell",
    srcs = ["shell.py"],
    imports = ["endpoint_scripts"],
    visibility = ["//visibility:public"],
    deps = ENDPOINT_SCRIPTS,
)

py_library(
    name = "common",
    srcs = [
        "common.py",
    ],
    visibility = ["//visibility:public"],
    deps = ["//witness/api:py_grpc"],
)

py_binary(
    name = "track",
    srcs = ["track.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//witness/api:py_grpc",
    ],
)

py_binary(
    name = "download_all",
    srcs = ["download_all.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        ":list_files",
        "//witness/api:py_grpc",
    ],
)

py_binary(
    name = "automated_timelapse",
    srcs = ["automated_timelapse.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        ":start_timelapse",
        ":stop_recording",
        "//witness/api:py_grpc",
    ],
)

py_binary(
    name = "list_files",
    srcs = ["list_files.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//witness/api:py_grpc",
    ],
)

py_binary(
    name = "get_version",
    srcs = ["get_version.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//witness/api:py_grpc",
    ],
)

py_binary(
    name = "start_timelapse",
    srcs = ["start_timelapse.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//witness/api:py_grpc",
    ],
)

py_binary(
    name = "set_rotation",
    srcs = ["set_rotation.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//witness/api:py_grpc",
    ],
)

py_binary(
    name = "open_webcam",
    srcs = ["open_webcam.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//witness/api:py_grpc",
    ],
)

py_binary(
    name = "clear_data",
    srcs = ["clear_data.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//witness/api:py_grpc",
    ],
)

py_binary(
    name = "start_monitor",
    srcs = ["start_monitor.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//witness/api:py_grpc",
    ],
)

py_binary(
    name = "take_photo",
    srcs = ["take_photo.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//witness/api:py_grpc",
    ],
)

py_binary(
    name = "take_3",
    srcs = ["take_3.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        ":take_photo",
        "//witness/api:py_grpc",
    ],
)

py_binary(
    name = "get_server_state",
    srcs = ["get_server_state.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//witness/api:py_grpc",
    ],
)

py_binary(
    name = "start_recording",
    srcs = ["start_recording.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//witness/api:py_grpc",
    ],
)

py_binary(
    name = "start_calibration",
    srcs = ["start_calibration.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//witness/api:py_grpc",
    ],
)

py_binary(
    name = "stop_recording",
    srcs = ["stop_recording.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//witness/api:py_grpc",
    ],
)

pylint()
