cc_library(
    name = "converters",
    srcs = ["converters.cpp"],
    hdrs = ["converters.h"],
    linkopts = ["-ldl"],
    visibility = ["//visibility:public"],
    deps = [
        "//witness/api:cc_proto",
        "//witness/server/time",
        "@apriltag_archive//:apriltag",
        "@eigen",
        "@opencv//:core",
    ],
)

cc_test(
    name = "converters_test",
    srcs = ["converters_test.cpp"],
    deps = [
        ":converters",
        "@com_github_google_glog//:glog",
        "@googletest//:gtest",
    ],
)
