load("@murtis_bazel_tools//tools:linters.bzl", "cpplint")

cc_library(
    name = "file_operations",
    srcs = ["file_operations.cpp"],
    hdrs = ["file_operations.h"],
    linkopts = ["-lstdc++fs"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/time",
    ],
)

cc_test(
    name = "file_operations_test",
    srcs = ["file_operations_test.cpp"],
    deps = [
        ":file_operations",
        "//external:gtest",
    ],
)

cpplint()
