load("@murtis_bazel_tools//tools:linters.bzl", "cpplint")

cc_library(
    name = "time",
    srcs = ["time.cpp"],
    hdrs = ["time.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "time_test",
    srcs = ["time_test.cpp"],
    deps = [
        ":time",
        "//external:gtest",
        "@com_github_google_glog//:glog",
    ],
)

cpplint()
