cc_library(
    name = "webcam",
    srcs = ["webcam.cpp"],
    hdrs = ["webcam.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//witness/server/file_operations",
        "@com_github_google_glog//:glog",
        "@opencv//:core",
        "@opencv//:video",
        "@opencv//:videoio",
    ],
)
