load("@murtis_bazel_tools//tools:linters.bzl", "cpplint")

cc_library(
    name = "webcam_action",
    srcs = ["webcam_action.cpp"],
    hdrs = ["webcam_action.h"],
    deps = ["//witness/server/webcam"],
)

cc_library(
    name = "video_recorder",
    srcs = ["video_recorder.cpp"],
    hdrs = ["video_recorder.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":webcam_action",
    ],
)

cc_library(
    name = "monitor",
    srcs = ["monitor.cpp"],
    hdrs = ["monitor.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":webcam_action",
    ],
)

cc_library(
    name = "timelapse",
    srcs = ["timelapse.cpp"],
    hdrs = ["timelapse.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":webcam_action",
        "//witness/server/vision:create_timelapse",
    ],
)

cc_library(
    name = "tracking",
    srcs = ["tracking.cpp"],
    hdrs = ["tracking.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":webcam_action",
        "//witness/api:cc_grpc",
        "//witness/server/converters",
        "//witness/server/file_operations",
        "//witness/server/vision:apriltag",
        "//witness/server/vision:imshow_wrapper",
        "@apriltag_archive//:apriltag",
    ],
)

cc_library(
    name = "calibrate",
    srcs = ["calibrate.cpp"],
    hdrs = ["calibrate.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":webcam_action",
        "//witness/api:cc_grpc",
        "//witness/server/file_operations",
        "//witness/server/vision:calibration",
        "@apriltag_archive//:apriltag",
    ],
)

cpplint()
